--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,13 @@ on:
         default: 'beta'
         type: string
 
+# Grant GITHUB_TOKEN the permissions required to make releases
+permissions:
+  contents: write
+  pull-requests: write
+  issues: write
+  packages: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -29,6 +36,8 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
+          # This ensures the workflow can push back to the repo
+          persist-credentials: true
           
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -43,6 +52,8 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          # Configure git to use the token for authentication
+          git config --local url."https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/".insteadOf "https://github.com/"
           
       - name: Run tests before release
         run: |
@@ -104,10 +115,19 @@ jobs:
           git commit -m "chore: bump version to ${{ steps.version-bump.outputs.new-version }}"
           
       - name: Create and push tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          echo "Creating tag ${{ steps.version-bump.outputs.new-version }}..."
           git tag ${{ steps.version-bump.outputs.new-version }}
+          
+          echo "Pushing commits to main..."
           git push origin main
+          
+          echo "Pushing tag ${{ steps.version-bump.outputs.new-version }}..."
           git push origin ${{ steps.version-bump.outputs.new-version }}
+          
+          echo "✅ Successfully created and pushed tag!"
           
       - name: Generate release notes
         id: release-notes
@@ -162,12 +182,43 @@ jobs:
           EOF
           
       - name: Create GitHub Release
-        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.version-bump.outputs.new-version }}
-          release_name: Release ${{ steps.version-bump.outputs.new-version }}
-          body_path: release-notes.md
-          draft: false
-          prerelease: ${{ github.event.inputs.version_type == 'prerelease' }} 
+        run: |
+          # Create release using GitHub CLI
+          if [ "${{ github.event.inputs.version_type }}" = "prerelease" ]; then
+            gh release create ${{ steps.version-bump.outputs.new-version }} \
+              --title "Release ${{ steps.version-bump.outputs.new-version }}" \
+              --notes-file release-notes.md \
+              --prerelease
+          else
+            gh release create ${{ steps.version-bump.outputs.new-version }} \
+              --title "Release ${{ steps.version-bump.outputs.new-version }}" \
+              --notes-file release-notes.md
+          fi
+          
+      - name: Publish to NPM
+        if: success()
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          echo "Publishing to NPM..."
+          if [ "${{ github.event.inputs.version_type }}" = "prerelease" ]; then
+            npm publish --tag beta
+          else
+            npm publish
+          fi
+          echo "✅ Successfully published to NPM!"
+          
+      - name: Release Summary
+        if: always()
+        run: |
+          echo "🎉 Release workflow completed!"
+          echo "Version: ${{ steps.version-bump.outputs.new-version }}"
+          echo "Type: ${{ github.event.inputs.version_type }}"
+          if [ "${{ github.event.inputs.version_type }}" = "prerelease" ]; then
+            echo "Prerelease tag: ${{ github.event.inputs.prerelease_tag }}"
+          fi
+          echo "Repository: ${{ github.repository }}"
+          echo "NPM Package: https://www.npmjs.com/package/infura-mcp-server"
+          echo "GitHub Release: ${{ github.server_url }}/${{ github.repository }}/releases/tag/${{ steps.version-bump.outputs.new-version }}" 
