--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -163,6 +163,19 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          
+      - name: Make package public
+        if: success() && github.event_name == 'release'
+        run: |
+          # Make the package public after successful push
+          gh api \
+            --method PATCH \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /user/packages/container/infura-mcp-server \
+            -f visibility='public'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Generate image summary
         if: success()
