feat: improve Infura MCP server status
- refactor: optimize project structure and file organization
- security: improve CI/CD security controls
- test: add comprehensive testing framework for all 40 tools
- ci: update workflows with modern actions and dependency management
- docs: enhance testing documentation and error handling

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -220,7 +220,22 @@ jobs:
           output: 'trivy-results.sarif'
 
       - name: Upload Trivy scan results
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
-          sarif_file: 'trivy-results.sarif' 
+          sarif_file: 'trivy-results.sarif'
+
+      - name: Generate SBOM
+        uses: anchore/sbom-action@v0
+        if: success()
+        with:
+          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          format: spdx-json
+          output-file: sbom.spdx.json
+
+      - name: Upload SBOM
+        uses: actions/upload-artifact@v4
+        if: success()
+        with:
+          name: sbom
+          path: sbom.spdx.json 
