--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "test": "npm run test:validate && npm run test:tools",
     "test:validate": "node test/validate.js",
     "test:tools": "node test/tools.js",
-    "test:sse": "node test-sse.js",
-    "test:all": "npm test && npm run test:sse",
+    "test:comprehensive": "node test/comprehensive-tools.js",
+    "test:integration": "node test/integration.js",
+    "test:sse": "node test/test-sse.js",
+    "test:all": "npm test && npm run test:comprehensive && npm run test:sse",
+    "test:full": "npm test && npm run test:comprehensive && npm run test:integration && npm run test:sse",
     "commitlint": "commitlint --edit",
     "commitlint:last": "commitlint --from HEAD~1 --to HEAD --verbose",
     "commitlint:ci": "commitlint --verbose",
