--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -8,8 +8,49 @@ on:
       - 'v*'
 
 jobs:
+  # Security check - only allow repository owner to publish
+  authorize:
+    runs-on: ubuntu-latest
+    outputs:
+      authorized: ${{ steps.auth-check.outputs.authorized }}
+    steps:
+      - name: Check authorization
+        id: auth-check
+        run: |
+          # Only allow repository owner or specified collaborators
+          AUTHORIZED_USERS="Qbandev"
+          REPO_OWNER="${{ github.repository_owner }}"
+          ACTOR="${{ github.actor }}"
+
+          echo "Repository owner: $REPO_OWNER"
+          echo "Workflow actor: $ACTOR"
+          echo "Authorized users: $AUTHORIZED_USERS"
+
+          # Check if actor is repository owner
+          if [ "$ACTOR" = "$REPO_OWNER" ]; then
+            echo "✅ Authorized: Repository owner"
+            echo "authorized=true" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          # Check if actor is in authorized users list
+          for user in $AUTHORIZED_USERS; do
+            if [ "$ACTOR" = "$user" ]; then
+              echo "✅ Authorized: Listed in authorized users"
+              echo "authorized=true" >> $GITHUB_OUTPUT
+              exit 0
+            fi
+          done
+
+          # Not authorized
+          echo "❌ Unauthorized: $ACTOR is not authorized to publish packages"
+          echo "authorized=false" >> $GITHUB_OUTPUT
+          exit 1
+
   publish:
     runs-on: ubuntu-latest
+    needs: authorize
+    if: needs.authorize.outputs.authorized == 'true'
 
     strategy:
       matrix:
@@ -26,7 +67,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
  
       - name: Cache dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
@@ -81,27 +122,28 @@ jobs:
 
       - name: Create GitHub release (if tag)
         if: startsWith(github.ref, 'refs/tags/v') && matrix.node-version == '20'
-        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            ## Changes in this version
+        run: |
+          # Extract tag name
+          TAG_NAME=${GITHUB_REF#refs/tags/}
+          
+          # Create release using GitHub CLI (modern approach)
+          gh release create "$TAG_NAME" \
+            --title "Release $TAG_NAME" \
+            --notes "## Changes in this version
 
-            Please see the [CHANGELOG.md](./CHANGELOG.md) for detailed changes.
+          Please see the [CHANGELOG.md](./CHANGELOG.md) for detailed changes.
 
-            ## Installation
+          ## Installation
 
-            ```bash
-            npm install -g infura-mcp-server
-            # or
-            npx infura-mcp-server
-            ```
+          \`\`\`bash
+          npm install -g infura-mcp-server
+          # or
+          npx infura-mcp-server
+          \`\`\`
 
-            ## What's Changed
+          ## What's Changed
 
-            For a complete list of changes, see the commit history since the last release.
-          draft: false
-          prerelease: false 
+          For a complete list of changes, see the commit history since the last release." \
+            --verify-tag 
