--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "infura-mcp-server",
   "version": "0.1.1",
-  "description": "An MCP server for the Infura API, providing tools to interact with the Ethereum blockchain.",
+  "description": "An MCP server for the Infura API, providing 35+ Ethereum JSON-RPC tools to interact with the blockchain.",
   "main": "index.js",
   "type": "module",
   "bin": {
@@ -17,6 +17,7 @@
     "test:comprehensive": "node test/comprehensive-tools.js",
     "test:integration": "node test/integration.js",
     "test:sse": "node test/test-sse.js",
+    "test:api": "npm run test:comprehensive && npm run test:integration",
     "test:all": "npm test && npm run test:comprehensive && npm run test:sse",
     "test:full": "npm test && npm run test:comprehensive && npm run test:integration && npm run test:sse",
     "commitlint": "commitlint --edit",
@@ -31,7 +32,7 @@
     "docker:build": "docker build -t infura-mcp-server .",
     "docker:run": "docker run --rm -i -e INFURA_API_KEY=${INFURA_API_KEY} infura-mcp-server",
     "docker:run:sse": "docker run --rm -p 3001:3001 -e INFURA_API_KEY=${INFURA_API_KEY} infura-mcp-server node mcpServer.js --sse",
-    "docker:test": "docker run --rm -e INFURA_API_KEY=test_key infura-mcp-server --help",
+    "docker:test": "docker run --rm infura-mcp-server --help",
     "docker:compose:up": "docker-compose up -d infura-mcp-server-sse",
     "docker:compose:stdio": "docker-compose run --rm infura-mcp-server",
     "docker:compose:down": "docker-compose down",
