--- a/package.json
+++ b/package.json
@@ -1,12 +1,43 @@
 {
   "name": "infura-mcp-server",
   "version": "0.1.1",
-  "description": "An MCP server for the Infura API, providing 35+ Ethereum JSON-RPC tools to interact with the blockchain.",
+  "description": "Model Context Protocol (MCP) server providing comprehensive Ethereum blockchain access through Infura's infrastructure. Connect Claude Desktop, VS Code, and Cursor to 35+ Ethereum JSON-RPC tools across 21+ networks including Ethereum, Polygon, Arbitrum, Base, and Optimism.",
+  "keywords": [
+    "mcp",
+    "model-context-protocol",
+    "infura",
+    "ethereum",
+    "blockchain",
+    "json-rpc",
+    "web3",
+    "claude",
+    "cursor",
+    "vscode",
+    "ai",
+    "assistant",
+    "defi",
+    "smart-contracts",
+    "polygon",
+    "arbitrum",
+    "base",
+    "optimism",
+    "layer2",
+    "l2"
+  ],
   "main": "index.js",
   "type": "module",
   "bin": {
     "infura-mcp-server": "mcpServer.js"
   },
+  "files": [
+    "index.js",
+    "mcpServer.js",
+    "lib/",
+    "tools/",
+    "commands/",
+    "LICENSE",
+    "README.md"
+  ],
   "scripts": {
     "start": "node mcpServer.js",
     "start:sse": "node mcpServer.js --sse",
@@ -17,9 +48,11 @@
     "test:comprehensive": "node test/comprehensive-tools.js",
     "test:integration": "node test/integration.js",
     "test:sse": "node test/test-sse.js",
+    "test:npm": "node test/npm-consistency.js",
     "test:api": "npm run test:comprehensive && npm run test:integration",
     "test:all": "npm test && npm run test:comprehensive && npm run test:sse",
     "test:full": "npm test && npm run test:comprehensive && npm run test:integration && npm run test:sse",
+    "test:publish": "npm run test:npm && npm pack --dry-run",
     "commitlint": "commitlint --edit",
     "commitlint:last": "commitlint --from HEAD~1 --to HEAD --verbose",
     "commitlint:ci": "commitlint --verbose",
@@ -40,12 +73,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/qbandev/infura-mcp-server.git"
+    "url": "git+https://github.com/qbandev/infura-mcp-server.git"
   },
   "bugs": {
     "url": "https://github.com/qbandev/infura-mcp-server/issues"
   },
   "homepage": "https://github.com/qbandev/infura-mcp-server#readme",
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/qbandev"
+  },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.9.0",
     "commander": "^13.1.0",
@@ -61,6 +98,18 @@
   "engines": {
     "node": ">=16.0.0"
   },
-  "author": "qbandev",
-  "license": "MIT"
+  "author": {
+    "name": "qbandev",
+    "url": "https://github.com/qbandev"
+  },
+  "license": "MIT",
+  "os": [
+    "darwin",
+    "linux",
+    "win32"
+  ],
+  "cpu": [
+    "x64",
+    "arm64"
+  ]
 }
