chore: implement copilot changes

--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "test:sse": "node test/test-sse.js",
     "test:npm": "node test/npm-consistency.js",
     "test:api": "npm run test:comprehensive && npm run test:integration",
-    "test:all": "npm test && npm run test:comprehensive && npm run test:sse",
-    "test:full": "npm test && npm run test:comprehensive && npm run test:integration && npm run test:sse",
+    "test:full": "npm test && npm run test:comprehensive && npm run test:integration && npm run test:sse && npm run test:npm",
     "test:publish": "npm run test:npm && npm pack --dry-run",
     "commitlint": "commitlint --edit",
     "commitlint:last": "commitlint --from HEAD~1 --to HEAD --verbose",
