--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -80,35 +80,7 @@ jobs:
       - name: Run comprehensive tests before publish
         env:
           INFURA_API_KEY: ${{ secrets.INFURA_API_KEY }}
-        run: |
-          echo "🧪 Running comprehensive test suite before npm publish..."
-          
-          # Run basic validation tests
-          echo "📋 Running validation tests..."
-          npm test
-          
-          # Run comprehensive tool testing (all 29 tools)
-          echo "🔧 Running comprehensive tool validation (29 tools)..."
-          if [ -n "$INFURA_API_KEY" ]; then
-            echo "🔑 Using real API key for comprehensive testing..."
-            npm run test:comprehensive
-          else
-            echo "⚠️ No API key available, running structure validation only..."
-            npm run test:comprehensive
-          fi
-          
-          # Run SSE functionality tests  
-          echo "🌐 Running SSE functionality tests..."
-          npm run test:sse
-          
-          # Run integration tests if API key is available
-          if [ -n "$INFURA_API_KEY" ]; then
-            echo "🔗 Running integration tests with real API..."
-            npm run test:integration
-            echo "✅ All tests including real API validation passed - ready for npm publish!"
-          else
-            echo "⚠️ Publishing proceeding without API validation (no secret configured)"
-          fi
+        run: ./scripts/run-ci-tests.sh "npm publish"
         continue-on-error: false
 
       - name: Verify package can be built
