--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -21,9 +21,7 @@ jobs:
       - uses: googleapis/release-please-action@v4
         id: release
         with:
-          # Use GITHUB_TOKEN or a PAT with PR permissions
-          # If using PAT, create a secret called RELEASE_PLEASE_TOKEN
-          token: ${{ secrets.RELEASE_PLEASE_TOKEN || secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           release-type: node
 
   # Publish to npm when a release is created
