fix: address valid Copilot review suggestions
- Fix protocol version to 2024-11-05 (supported by SDK 1.25.1)
- Handle ValidationError with proper InvalidParams error code
- Run security scanning on PRs (not just main branch pushes)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,11 +156,10 @@ jobs:
 
           echo "✅ Bundle size check completed"
 
-  # Security scanning job
+  # Security scanning job - runs on PRs and main pushes
   security:
     runs-on: ubuntu-latest
     needs: test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     steps:
       - name: Checkout code
