fix: improve test strictness and graceful shutdown
- test/test-http.js: Make tool count check a hard failure instead of
  warning to catch tool count regressions
- mcpServer.js: Track shutdown errors and use appropriate exit code
  (0 for success, 1 if any session cleanup failed)
- docker-compose.yml: Add clarifying comment about Compose Spec format

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+# Docker Compose file for Infura MCP Server (Compose Spec format - no version needed)
 services:
   # Web service deployment (Streamable HTTP mode - recommended for 2025+)
   infura-mcp-server-http:
