ci(npm): add fallback token support for npm publish
Add NODE_AUTH_TOKEN env var to npm publish steps as fallback when
OIDC trusted publishing is not configured. This allows publishing via:
1. OIDC trusted publishing (recommended, no token needed)
2. Granular access token stored in NPM_TOKEN secret (fallback)

Both methods support npm provenance attestation.

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -126,11 +126,14 @@ jobs:
           fi
 
       # npm Trusted Publishing with OIDC (Dec 2025+)
-      # No NPM_TOKEN needed - authentication via OIDC
+      # Primary: OIDC authentication (no token needed)
+      # Fallback: Granular access token via NPM_TOKEN secret
       # Configured at: npmjs.com/package/infura-mcp-server/access
-      - name: Publish to npm with provenance (OIDC)
+      - name: Publish to npm with provenance
         if: steps.check-published.outputs.already-published == 'false'
         run: npm publish --provenance --access public --tag ${{ github.event.inputs.npm_tag }}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Create publish summary
         if: always()
