--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -71,10 +71,13 @@ jobs:
         continue-on-error: true
 
       # npm Trusted Publishing with OIDC (Dec 2025+)
-      # No NPM_TOKEN needed - authentication via OIDC
+      # Primary: OIDC authentication (no token needed)
+      # Fallback: Granular access token via NPM_TOKEN secret
       # Configured at: npmjs.com/package/infura-mcp-server/access
-      - name: Publish to npm with provenance (OIDC)
+      - name: Publish to npm with provenance
         run: npm publish --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Create release summary
         run: |
