fix(ci): remove NODE_AUTH_TOKEN for npm OIDC publishing
The npm publish was failing with ENEEDAUTH error because NODE_AUTH_TOKEN
was set to an empty value. With npm Trusted Publishing via OIDC, no token
is needed - authentication happens automatically through the id-token
permission and environment configuration.

This fix removes the NODE_AUTH_TOKEN environment variable entirely,
allowing npm to use pure OIDC authentication as configured at:
https://www.npmjs.com/package/infura-mcp-server/access

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -71,13 +71,11 @@ jobs:
         continue-on-error: true
 
       # npm Trusted Publishing with OIDC (Dec 2025+)
-      # Primary: OIDC authentication (no token needed)
-      # Fallback: Granular access token via NPM_TOKEN secret
+      # OIDC authentication (no token needed)
       # Configured at: npmjs.com/package/infura-mcp-server/access
       - name: Publish to npm with provenance
         run: npm publish --provenance --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        # Note: No NODE_AUTH_TOKEN needed - OIDC handles authentication automatically
 
       - name: Create release summary
         run: |
