fix(ci): remove registry-url from setup-node for OIDC auth
The registry-url parameter in actions/setup-node automatically creates an
.npmrc file with auth configuration that expects NODE_AUTH_TOKEN. This
conflicts with pure npm OIDC authentication.

Removing registry-url allows npm to use OIDC authentication directly
without any token-based auth configuration.

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -46,7 +46,7 @@ jobs:
       - uses: actions/setup-node@v6
         with:
           node-version: '22'
-          registry-url: 'https://registry.npmjs.org'
+          # registry-url removed for npm OIDC authentication
 
       - name: Install dependencies
         run: npm ci
