--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -48,6 +48,10 @@ jobs:
           node-version: '22'
           # registry-url removed for npm OIDC authentication
 
+      - name: Upgrade npm for OIDC support
+        run: npm install -g npm@11.7.0
+        # npm 11.5+ required for OIDC authentication
+
       - name: Install dependencies
         run: npm ci
 
